chore: fix devtip date alignment

--- a/styles/DevTips.module.css
+++ b/styles/DevTips.module.css
@@ -56,7 +56,7 @@
   min-width: 7.4rem;
   white-space: nowrap;
   font-weight: 700;
-  align-self: center;
+  margin-top: 2px;
 }
 
 .devTipsList > span {
